# Gameboy-emulator

./: .gitignore  CMakeLists.txt  LICENSE
src/: Cartridge.cpp  Cartridge.h  Constants.h  Core.cpp  Core.h  MemoryManagementUnit.cpp  MemoryManagementUnit.h  Register.h  RegisterPair.h  main.cpp
